# yolov11_e2e

./: .gitignore  CMakeLists.txt  README.md
config/: plugin_config.yml
src/: main.cpp
src/algos/: algo_logger.cpp  algo_logger.hpp  det_structs.h  yolov11_e2e.cpp  yolov11_e2e.hpp
src/nvprocess/: cu_marcos.h  img_precess_k.cu  img_precess_k.hpp  img_precess_p.cpp  img_precess_p.hpp  trt_logger.cpp  trt_logger.hpp  trt_runner_v2.cpp  trt_runner_v2.hpp  trt_runner_v3.cpp  trt_runner_v3.hpp
tool/: export_e2e_onnx.py  gen_precess_config.py  onnx2trt.sh
